--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
@@ -19,7 +20,7 @@
           // the single page app to route accordingly.
           (function(l) {
             if (l.search[1] === '/' ) {
-              var decoded = l.search.slice(1).split('&').map(function(s) { 
+              var decoded = l.search.slice(1).split('&').map(function(s) {
                 return s.replace(/~and~/g, '&')
               }).join('?');
               window.history.replaceState(null, null,
@@ -29,8 +30,8 @@
           }(window.location))
         </script>
         <!-- End Single Page Apps for GitHub Pages -->
-  <link href="/klaytn-online-toolkit/bundle.1afc2837c5fe235ba544.css?d1dacda2a2bb899d0a2b" rel="stylesheet"></head>
+  <link href="/klaytn-online-toolkit/bundle.78839d5b7248241f7855.css?67c0f9bd6aa1fb5fcf52" rel="stylesheet"></head>
   <body>
     <div id="root"></div>
-  <script type="text/javascript" src="/klaytn-online-toolkit/vendor.15c82490851a83d602b4.js?d1dacda2a2bb899d0a2b"></script><script type="text/javascript" src="/klaytn-online-toolkit/styles.1afc2837c5fe235ba544.js?d1dacda2a2bb899d0a2b"></script><script type="text/javascript" src="/klaytn-online-toolkit/main.d1dacda2a2bb899d0a2b.bundle.js?d1dacda2a2bb899d0a2b"></script></body>
+  <script type="text/javascript" src="/klaytn-online-toolkit/vendor.04d6abe8228741dcfb5b.js?67c0f9bd6aa1fb5fcf52"></script><script type="text/javascript" src="/klaytn-online-toolkit/styles.78839d5b7248241f7855.js?67c0f9bd6aa1fb5fcf52"></script><script type="text/javascript" src="/klaytn-online-toolkit/main.67c0f9bd6aa1fb5fcf52.bundle.js?67c0f9bd6aa1fb5fcf52"></script></body>
 </html>
