--- a/index.html
+++ b/index.html
@@ -1,37 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <title>Klaytn Online Toolkit</title>
-        <!-- Start Single Page Apps for GitHub Pages -->
-        <script type="text/javascript">
-          // Single Page Apps for GitHub Pages
-          // MIT License
-          // https://github.com/rafgraph/spa-github-pages
-          // This script checks to see if a redirect is present in the query string,
-          // converts it back into the correct url and adds it to the
-          // browser's history using window.history.replaceState(...),
-          // which won't cause the browser to attempt to load the new url.
-          // When the single page app is loaded further down in this file,
-          // the correct url will be waiting in the browser's history for
-          // the single page app to route accordingly.
-          (function(l) {
-            if (l.search[1] === '/' ) {
-              var decoded = l.search.slice(1).split('&').map(function(s) {
-                return s.replace(/~and~/g, '&')
-              }).join('?');
-              window.history.replaceState(null, null,
-                  l.pathname.slice(0, -1) + decoded + l.hash
-              );
-            }
-          }(window.location))
-        </script>
-        <!-- End Single Page Apps for GitHub Pages -->
-  <link href="/klaytn-online-toolkit/bundle.35b23478afc5d6f15e64.css?47d63f2f9bd35ae926bd" rel="stylesheet"></head>
-  <body>
-    <div id="root"></div>
-  <script type="text/javascript" src="/klaytn-online-toolkit/vendor.6d07b91792af8fdc511b.js?47d63f2f9bd35ae926bd"></script><script type="text/javascript" src="/klaytn-online-toolkit/styles.35b23478afc5d6f15e64.js?47d63f2f9bd35ae926bd"></script><script type="text/javascript" src="/klaytn-online-toolkit/main.47d63f2f9bd35ae926bd.bundle.js?47d63f2f9bd35ae926bd"></script></body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/klaytn-online-toolkit/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Web site created using create-react-app"/><link rel="apple-touch-icon" href="/klaytn-online-toolkit/logo192.png"/><link rel="manifest" href="/klaytn-online-toolkit/manifest.json"/><link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet"/><title>Klaytn Online Toolkit</title><script type="text/javascript">!function(n){if("/"===n.search[1]){var a=n.search.slice(1).split("&").map((function(n){return n.replace(/~and~/g,"&")})).join("?");window.history.replaceState(null,null,n.pathname.slice(0,-1)+a+n.hash)}}(window.location)</script><link href="/klaytn-online-toolkit/static/css/main.be82a45a.chunk.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div><script>!function(e){function t(t){for(var n,u,a=t[0],l=t[1],c=t[2],s=0,p=[];s<a.length;s++)u=a[s],Object.prototype.hasOwnProperty.call(o,u)&&o[u]&&p.push(o[u][0]),o[u]=0;for(n in l)Object.prototype.hasOwnProperty.call(l,n)&&(e[n]=l[n]);for(f&&f(t);p.length;)p.shift()();return i.push.apply(i,c||[]),r()}function r(){for(var e,t=0;t<i.length;t++){for(var r=i[t],n=!0,a=1;a<r.length;a++){var l=r[a];0!==o[l]&&(n=!1)}n&&(i.splice(t--,1),e=u(u.s=r[0]))}return e}var n={},o={1:0},i=[];function u(t){if(n[t])return n[t].exports;var r=n[t]={i:t,l:!1,exports:{}};return e[t].call(r.exports,r,r.exports,u),r.l=!0,r.exports}u.e=function(e){var t=[],r=o[e];if(0!==r)if(r)t.push(r[2]);else{var n=new Promise((function(t,n){r=o[e]=[t,n]}));t.push(r[2]=n);var i,a=document.createElement("script");a.charset="utf-8",a.timeout=120,u.nc&&a.setAttribute("nonce",u.nc),a.src=function(e){return u.p+"static/js/"+({}[e]||e)+"."+{3:"3da25ee1"}[e]+".chunk.js"}(e);var l=new Error;i=function(t){a.onerror=a.onload=null,clearTimeout(c);var r=o[e];if(0!==r){if(r){var n=t&&("load"===t.type?"missing":t.type),i=t&&t.target&&t.target.src;l.message="Loading chunk "+e+" failed.\n("+n+": "+i+")",l.name="ChunkLoadError",l.type=n,l.request=i,r[1](l)}o[e]=void 0}};var c=setTimeout((function(){i({type:"timeout",target:a})}),12e4);a.onerror=a.onload=i,document.head.appendChild(a)}return Promise.all(t)},u.m=e,u.c=n,u.d=function(e,t,r){u.o(e,t)||Object.defineProperty(e,t,{enumerable:!0,get:r})},u.r=function(e){"undefined"!=typeof Symbol&&Symbol.toStringTag&&Object.defineProperty(e,Symbol.toStringTag,{value:"Module"}),Object.defineProperty(e,"__esModule",{value:!0})},u.t=function(e,t){if(1&t&&(e=u(e)),8&t)return e;if(4&t&&"object"==typeof e&&e&&e.__esModule)return e;var r=Object.create(null);if(u.r(r),Object.defineProperty(r,"default",{enumerable:!0,value:e}),2&t&&"string"!=typeof e)for(var n in e)u.d(r,n,function(t){return e[t]}.bind(null,n));return r},u.n=function(e){var t=e&&e.__esModule?function(){return e.default}:function(){return e};return u.d(t,"a",t),t},u.o=function(e,t){return Object.prototype.hasOwnProperty.call(e,t)},u.p="/klaytn-online-toolkit/",u.oe=function(e){throw console.error(e),e};var a=this["webpackJsonpklaytn-online-toolkit"]=this["webpackJsonpklaytn-online-toolkit"]||[],l=a.push.bind(a);a.push=t,a=a.slice();for(var c=0;c<a.length;c++)t(a[c]);var f=l;r()}([])</script><script src="/klaytn-online-toolkit/static/js/2.dd0c90f1.chunk.js"></script><script src="/klaytn-online-toolkit/static/js/main.5148b16b.chunk.js"></script></body></html>
