Update Google tag

--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-TC0N5EPNNV"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || []
+      function gtag() {
+        dataLayer.push(arguments)
+      }
+      gtag('js', new Date())
+
+      gtag('config', 'G-TC0N5EPNNV')
+    </script>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="title"
-      content="Klaytn online toolkit"
-    />
+    <meta name="title" content="Klaytn online toolkit" />
     <meta
       name="description"
       content="Klaytn online toolkit provides code examples and github page to help to utilize the Klaytn SDK(caver-js) easily."
